--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/estil.css">
+  <link rel="stylesheet" href="css/estil.css">
+  <link rel="icon" type="image/x-icon" href="images/aules.png">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Aules GVA</title>
 </head>
 <body>
 
+<!-- La capçalera -->
+<div class="cap">
+  <img src="images/aules.svg" alt="" width="50%">
+  <p>Plataforma educativa de e-learning per a continuar la teua formació en línia!</p>
+</div>
+
+<!-- El bloc d'imatges-links -->
 <div class="container">
-  <header class="head">Header/Company Logo</header>
-  <nav class="nav">
-    <ul>
-      <li><a href="#">Link 1</a></li>
-      <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
-    </ul>
-  </nav>
-  <div class="content">
-    <h1>Content area</h1>
-    <p>Here we display the sections in source order for screens less than 576 pixels wide.</p>
-    <p>Then, we go to a two column layout for screens between 576 and 767 pixels wide.</p>
-    <p>Then, we go to a three column layout for screens over 767 pixels wide.</p>
-    <p>Resize the browser window to see the responsive effect.</p>
-  </div>
-  <div class="sidebar">Sidebar</div>
-  <div class="ads">Ads</div>
-  <footer class="footer">The footer</footer>
+  <div class="item1"><a href="#"><img  src="images/infantil.png" alt=""></a></div>
+  <div class="item2"><a href="#"><img  src="images/primaria.png" alt=""></a></div>
+  <div class="item3"><a href="#"><img  src="images/eso.png" alt=""></a></div>
+  <div class="item4"><a href="#"><img  src="images/batxiller.png" alt=""></a></div>
+  <div class="item5"><a href="#"><img  src="images/presencial.png" alt=""></a></div>
+  <div class="item6"><a href="#"><img  src="images/semi.png" alt=""></a></div>
+  <div class="item7"><a href="#"><img  src="images/fpa.png" alt=""></a></div>
+  <div class="item8"><a href="#"><img  src="images/ceed.png" alt=""></a></div>
+  <div class="item9"><a href="#"><img  src="images/especials.png" alt=""></a></div>
+  <div class="item10"><a href="#"><img src="images/iseacv.png" alt=""></a></div>
+  <div class="item11"><a href="#"><img src="images/professorat.png" alt=""></a></div>
+  <div class="item12"><a href="#"><img src="images/auto.png" alt=""></a></div>
+  <div class="item13"><a href="#"><img src="images/docent.png" alt=""></a></div>
+</div>
+
+<!-- El bloc itedu -->
+<div class="itedu">
+  <a href="https://portal.edu.gva.es/itedugva/va/" alt=""><img src="images/itedu.png" width="100%"></a>
+</div>
+
+<!-- El peu de la pagina -->
+<div class="peu">
+  <hr>
+  xavi blanes | DAW 1 | curs 25/26
 </div>
 
 </body>
-</html>
