Fix image source filename case in index.html
Updated image source filename to match case sensitivity.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- La capçalera -->
 <div class="cap">
-  <img src="images/aules.svg" alt="" width="50%">
+  <img src="images/Aules.svg" alt="" width="50%">
   <p>Plataforma educativa de e-learning per a continuar la teua formació en línia!</p>
 </div>
 
